objects/Blood_Donor__c.object
<CustomObject>
    <description>case study object1</description>
    <label>Blood Donor</label>
    <nameField>
        <displayFormat>BD-{000}</displayFormat>
        <label>Blood donor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blood Donors</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>DOB__c</fullName>
        <description>case study</description>
        <inlineHelpText>enter date of birth</inlineHelpText>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>age__c</fullName>
        <description>case study calculate age in blood donor</description>
        <formula>YEAR(TODAY())- YEAR( DOB__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <summaryForeignKey>blood_coor__c.Blood_Donor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enter Email address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>case study</description>
        <inlineHelpText>please select state</inlineHelpText>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tamil Nadu</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Blood Donors</relationshipLabel>
        <relationshipName>Blood_Donors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>case study</description>
        <inlineHelpText>please select districs</inlineHelpText>
        <label>District</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Madurai</fullName>
                </value>
                <value>
                    <fullName>Salem</fullName>
                </value>
                <value>
                    <fullName>Dharmapuri</fullName>
                </value>
                <value>
                    <fullName>Coimbatore</fullName>
                </value>
                <value>
                    <fullName>Tuticorin</fullName>
                </value>
                <value>
                    <fullName>Alappuzha</fullName>
                </value>
                <value>
                    <fullName>Ernakulam</fullName>
                </value>
                <value>
                    <fullName>Kannur</fullName>
                </value>
                <value>
                    <fullName>Idukki</fullName>
                </value>
                <value>
                    <fullName>Bagalkot</fullName>
                </value>
                <value>
                    <fullName>Bengaluru Urban</fullName>
                </value>
                <value>
                    <fullName>Bengaluru Rural</fullName>
                </value>
                <value>
                    <fullName>Belagavi</fullName>
                </value>
                <value>
                    <fullName>Srikakulam</fullName>
                </value>
                <value>
                    <fullName>Vizianagaram</fullName>
                </value>
                <value>
                    <fullName>Visakhapatnam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <inlineHelpText>Enter phone Number</inlineHelpText>
        <label>Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Blood_Group__c</fullName>
        <description>case study blood groups</description>
        <inlineHelpText>please select the blood group</inlineHelpText>
        <label>Blood Group</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A positive</fullName>
                </value>
                <value>
                    <fullName>A negative</fullName>
                </value>
                <value>
                    <fullName>AB positive</fullName>
                </value>
                <value>
                    <fullName>AB negative</fullName>
                </value>
                <value>
                    <fullName>B positive</fullName>
                </value>
                <value>
                    <fullName>B negative</fullName>
                </value>
                <value>
                    <fullName>O positive</fullName>
                </value>
                <value>
                    <fullName>O negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Body_weight__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enter body weight in kg</inlineHelpText>
        <label>Body weight</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blood_donor_Name__c</fullName>
        <description>case study</description>
        <label>Blood donor Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blood_donated_date__c</fullName>
        <description>case study</description>
        <label>blood donated date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remaining_days_to_donate__c</fullName>
        <description>case study</description>
        <formula>IF(( TODAY() -  blood_donated_date__c  ) &gt;90, 0,90 -( TODAY() -  blood_donated_date__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining days to donate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_for_blood_donation__c</fullName>
        <description>case study checks eligiblity for blood donor</description>
        <formula>age__c  &gt; 18 &amp;&amp;  Body_weight__c  &gt; 50&amp;&amp; IF( ( TODAY() - blood_donated_date__c ) &gt; 90  , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible for blood donation</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>